bugs: Tangled up in trying to adjust too much for adding a 2nd map. Best strategy is probably to start 'from 0' with previous commit-- but investigate and keep some editing on the way and lessons what works and what does not.

--- a/css/main.css
+++ b/css/main.css
@@ -485,12 +485,12 @@ span {
   max-width: 100%;
 }
 
-#mapDiv {
+.mapDiv {
   height: 300px;
   width: 100%;
 }
 
-#map {
+.maps {
   display: block;
   height: 100%;
   margin: 1px;
